# gha_demo

./: CHANGELOG.md  Cargo.toml  README.md  chef.alpine.dockerfile  chef.debian.dockerfile  deny.toml  docker-compose.yaml  release-plz.toml
.github/workflows/: release_ptz.yaml  rust_build_debian_chef.yaml  rust_test.yaml
.sqlx/: query-ede5557921ccfab2d2723196d6a2db263366579e453f180a544dc435c199460d.json
benches/: latency.rs
configuration/: base.yaml  local.yaml
migrations/: 20250822153422_cats.sql
src/: app.rs  error.rs  lib.rs  main.rs  run.rs  settings.rs  telemetry.rs  types.rs
src/routes/: latency.rs  mod.rs
src/routes/v1/: mod.rs  router.rs
src/routes/v1/cats/: get.rs  mod.rs  post.rs  types.rs
tests/api/: cats.rs  health.rs  main.rs  utils.rs
