[package]
name = "gha_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", default-features = false }
axum = { version = "0.8.4", features = [
  "http1",
  "json",
  "tokio",
], default-features = false }
config = { version = "0.15.14", features = ["yaml"], default-features = false }
rand = { version = "0.9.2", features = [
  "os_rng",
  "std_rng",
], default-features = false }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", default-features = false }
serde-aux = { version = "4.7.0", default-features = false }
sqlx = { version = "0.8.6", features = [
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "uuid",
], default-features = false }
thiserror = { version = "2.0.16", default-features = false }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = { version = "0.1.41", default-features = false }
tracing-log = { version = "0.2.0", default-features = false, features = [
  "log-tracer",
  "std",
] }
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "fmt",
], default-features = false }
uuid = { version = "1.18.0", features = [
  "serde",
  "v4",
], default-features = false }

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["json"], default-features = false }

[[bin]]
name = "gha_demo"
path = "src/main.rs"
